# RootMe-Bot-0xECE

./: .dockerignore  .gitignore  Dockerfile  README.md  controller.py  docker-compose.yml  log_bot_container.sh  main.py  parser.py  pyproject.toml  reducce.py  requester.py  rootme_data.db  scenario.py  scenarios.py  store_data.py  test.py
bot/: controller.py  main.py  reduce.py  requester.py  scenario.py
