[tool.poetry]
name = "ultimaterootmeapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bs4 = "^0.0.2"
discord = "^2.3.2"
asyncio = "^3.4.3"
aiohttp = "^3.11.11"
discord-py = "^2.4.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
